--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,25 +1,106 @@
 ---
 title: "Reproducible Research: Peer Assessment 1"
-output: 
-  html_document:
-    keep_md: true
+output: html_document
+keep_md: true
 ---
 
+This document is for the Peer Assessment-1 of the reproducsible research. 
 
 ## Loading and preprocessing the data
+```{r, echo=TRUE}
+currentdir = getwd()
+library(data.table)
 
+#filepath = paste(currentdir, "/activity.csv", sep="")
+filepath = "C:/Srini/Coursera/5-ReproducibleResearch/RepData_PeerAssessment1/data/activity.csv"
+data <- read.csv("activity.csv")
+aggregate(steps ~ date, data, sum)
+
+# Remove the NA values
+cleandata = na.omit(data)
+tabledata <- data.table(data)
+tabledata[, minutesseq := sequence(.N), by = c("date")]
+
+```
 
 
 ## What is mean total number of steps taken per day?
 
+1. Calculate the total number of steps taken per day
+```{r, echo=TRUE}
+stepsperday = aggregate(steps ~ date, cleandata, sum)
+steps = stepsperday$steps
+```
+
+
+2. Histogram of steps taken each day.
+
+```{r, echo=TRUE}
+hist(steps, col = c("blue", "red", "yellow", "green", "violet", "orange"))
+```
+
+2. Calculate and report the mean and median of the total number of steps taken per day
+
+The mean number of steps taken per day is:
+```{r, echo=TRUE}
+mean(stepsperday$steps)
+```
+
+The median is:
+```{r, echo=TRUE}
+#mean steps per day
+median(stepsperday$steps)
+```
 
 
 ## What is the average daily activity pattern?
+1. Make a time series plot (i.e. type = "l") of the 5-minute
+To make the time series plot of 5 minute interval along the average number of steps take in the 5 minute interval, the
+data is necessary for the avargae steps in the each of the 5 minute interval across all days.
+```{r, echo=TRUE}
+library(plyr)
+stepsineachinterval = ddply(cleandata, .(interval), summarize,  avesteps=mean(steps))
+plot(stepsineachinterval$interval, stepsineachinterval$avesteps, type = "l", col = "blue")
+```
 
+2. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
+Finding the 5 minute interval in which, at an averge, the maximum number of steps were taken.
+```{r, echo=TRUE}
+stepsineachinterval[which.max(stepsineachinterval$avesteps),]
 
+```
+The maximum number of steps, on average, are taken in the minute interval between 8:30 and 8:35 am.
+
+Making a time series plot of 5-minute interval
 
 ## Imputing missing values
 
+```{r, echo=TRUE}
+# Updating the NA values with average steps in that interval.
+# For example, if the observation at 810 is missing, it will be set to the avarage number of steps take in that interval.
+
+# Copy the data to the new dataframe - dataupdated
+dataupdated = data
+totalrows = nrow(dataupdated)
+
+count = 0
+for (i in 1:nrow(dataupdated)) {
+  if (is.na(dataupdated[i, 1])) {
+    count = count + 1
+    matchinginterval = dataupdated[i,3]
+    newval = subset(stepsineachinterval, interval == matchinginterval)[1,2]
+    dataupdated[i,1] = newval
+  }
+}
 
 
-## Are there differences in activity patterns between weekdays and weekends?
+```
+
+
+## Histogram with the dataset where NA value is replaced with the average value
+```{r, echo=TRUE}
+stepsperday = aggregate(steps ~ date, dataupdated, sum)
+steps = stepsperday$steps
+hist(steps, col = c("blue", "red", "yellow", "green", "violet", "orange"))
+
+```
